# RADICL_DNA_peak_enrichment

./: .gitignore
RADICL_DNA_peak_enrichment/: pyproject.toml
scripts/: RADICL_peak_read_annotation_enrichment.py  concatenate_clean_RADICL_data.sh  extract_peak_read_ID.py  geneClass_peak_content.py  gff_parsing.py  in_vs_out_genes.py  transcript_content_count.py
